--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"csv-writer": "^1.6.0",
+		"joi": "^17.6.0",
 		"lodash": "^4.17.21",
 		"puppeteer-extra": "^3.3.4",
 		"puppeteer-extra-plugin-adblocker": "^2.13.4",
